add background picture and title

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <script src="./script.js"></script>
   </head>
   <body>
-    <h1>Pueblo Name Generator</h1>
-    <button id="generate">Generate</button>
-    <div id="response"></div>
+    <header>
+      <div class="background"></div>
+      <div class="title"></div>
+    </header>
+    <button id="generate">Generate!</button>
+    <div class="sign">
+      <div class="border">
+        <div id="response"></div>
+      </div>
+    </div>
   </body>
 </html>
