add posts to sign and tweak style of button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <div class="border">
         <div id="response"></div>
       </div>
+      <div class="posts">
+        <div class="vertical-line"></div>
+        <div class="vertical-line"></div>
+      </div>
     </div>
   </body>
 </html>
