add intro message to sign

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button id="generate">Generate!</button>
     <div class="sign">
       <div class="border">
-        <div id="response"></div>
+        <div id="response">Bienvenido a...</div>
       </div>
       <div class="posts">
         <div class="vertical-line"></div>
