remove display flex, change sign font, tweak style

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
       <div class="background"></div>
       <div class="title"></div>
     </header>
-    <button id="generate">Generate!</button>
-    <div class="sign">
-      <div class="border">
-        <div id="response">Bienvenido a...</div>
+    <div class="pueblo-button">
+      <div class="border-button">
+        <button id="generate">Generate!</button>
       </div>
-      <div class="posts">
-        <div class="vertical-line"></div>
-        <div class="vertical-line"></div>
+    </div>
+    <div class="pueblo-sign">
+      <div class="sign">
+        <div class="border">
+          <div id="response">Bienvenido a...</div>
+        </div>
+        <div class="posts">
+          <div class="vertical-line"></div>
+          <div class="vertical-line"></div>
+        </div>
       </div>
     </div>
   </body>
