--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="./script.js"></script>
   </head>
   <body>
+    <div class="background"></div>
     <header>
-      <div class="background"></div>
-      <div class="title"></div>
+      <img class="title" src="./assets/title.png" />
     </header>
     <div class="pueblo-button">
       <button id="generate">Generate!</button>
