--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PNG 🏠️</title>
+    <title>Pueblo Name Generator 🏠️</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
     <script src="./script.js"></script>
-  </head>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />  </head>
   <body>
     <div class="background"></div>
     <header>
