Add links to github and englishtown

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   <body>
     <div class="background"></div>
     <header>
-      <img class="title" src="./assets/title.png" />
+        <img class="title" src="./assets/title.png" />
     </header>
+    <a href="https://ireneairyn.github.io/pueblo-name-generator/" class="emoji-link" target="_blank">🏴󠁧󠁢󠁥󠁮󠁧󠁿</a>
+    <a href="https://github.com/ireneairyn" class="logo-link" target="_blank"><img src="./assets/github-mark-white.png" alt="github"></a>
+
     <div class="pueblo-button">
-      <button id="generate">Generate!</button>
+        <button id="generate">Generate!</button>
     </div>
     <div class="pueblo-sign">
       <div class="sign">
