--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <img class="title" src="./assets/title.png" />
     </header>
-    <a href="https://ireneairyn.github.io/pueblo-name-generator/" class="emoji-link" target="_blank">🏴󠁧󠁢󠁥󠁮󠁧󠁿</a>
+    <a href="https://ireneairyn.github.io/town-name-generator/" class="emoji-link" target="_blank">🏴󠁧󠁢󠁥󠁮󠁧󠁿</a>
     <a href="https://github.com/ireneairyn" class="logo-link" target="_blank"><img src="./assets/github-mark-white.png" alt="github"></a>
 
     <div class="pueblo-button">
